<resources>
    <string name="app_name">Zero</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ActivityTitle">My NanodegreeApps</string>
    <string name="Button1">Spotify Streamer</string>
    <string name="Button2">Scores App</string>
    <string name="Button3">Library App</string>
    <string name="Button4">Build It Bigger</string>
    <string name="Button5">XYZ Reader</string>
    <string name="Button6">Capstone : My Own app</string>
</resources>
