<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.avais.zero.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#006699">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ActivityTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Button1"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#F6F5AE"
        android:onClick="showToast" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Button2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#F6F5AE"
        android:onClick="showToast2" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Button3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#F6F5AE"
        android:onClick="showToast3" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Button4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#F6F5AE"
        android:onClick="showToast4" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Button5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#F6F5AE"
        android:onClick="showToast5" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Button6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#5B1865"
        android:onClick="showToast6" />



</RelativeLayout>
